fixed prpject card css styles for better readability

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,8 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
 
+@tailwind utilities;
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
@@ -42,6 +44,7 @@
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
 }
+
 @layer base {
   :root {
     --text-color: #5e5d5d;
@@ -57,6 +60,7 @@
     --secondary-foreground: 220.9 39.3% 11%;
     --muted: 220 14.3% 95.9%;
     --muted-foreground: 220 8.9% 46.1%;
+    --tertiary: hsl(0, 0%, 57%);
     --iconColor: #455d7a;
   }
 
@@ -70,6 +74,7 @@
     --primary-foreground: 210 20% 98%;
     --secondary: 215 27.9% 16.9%;
     --secondary-foreground: 210 20% 98%;
+    --tertiary: hsl(0, 0%, 57%);
     --iconColor: #8fd1c2;
     --social-color: #5e5d5d;
   }
@@ -83,8 +88,9 @@
   * {
     @apply outline-ring/50;
   }
+
   body {
-    @apply bg-background text-primary scroll-smooth p-6 font-sans;
+    @apply bg-background text-primary scroll-smooth p-8 font-sans;
     font-family: var(--font-sans), sans-serif;
     color: var(--main-text-color); /* Use the custom main text color */
   }
@@ -147,9 +153,7 @@
   .hamburger .bar {
     width: 23px;
     height: 2px;
-    /* border-radius: 2px; */
     background-color: var(--text-color);
-    /* border-radius: 2px; */
     transition: all 0.3s ease-in-out;
   }
 
@@ -178,5 +182,19 @@
 
   .card_grid-sm {
     @apply grid gap-5 sm:grid-cols-2;
+  }
+
+  @keyframes bounce-x {
+    0%,
+    100% {
+      transform: translateX(0);
+    }
+    50% {
+      transform: translateX(-6px);
+    }
+  }
+
+  .animate-bounce-x {
+    animation: bounce-x 0.5s ease-in-out infinite;
   }
 }
